@@ -1,3 +1,7 @@
+2022-11-30  Alex Kotov  <kotovalexarian@gmail.com>
+
+	* configure.ac: Fix CFLAGS setting
+
 2022-11-29  Alex Kotov  <kotovalexarian@gmail.com>
 
 	* include/kernaux/macro.h: Rename macro "KERNAUX_PACKING_ATTR" to
